I fixed the card irresponsiveness on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,16 @@ body{
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
+@media screen and (min-width:320px) and (max-width:1024px){
+    .card-image img{
+        width: 220px;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+    }
+    .card{
+        width: 220px;
+    }   
+}
 .card-content{
     padding: 10px 14px;
 }
